# openpresenter

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
src/: config.rs  lib.rs  main.rs
src/app/: actions.rs  mod.rs
src/db/: migrations.rs  mod.rs  repository.rs  schema.rs
src/domain/: mod.rs  props.rs
src/import/: mod.rs  openlyrics.rs  opp.rs
src/media/: audio.rs  decoder.rs  mod.rs  player.rs
src/ndi/: mod.rs  output.rs  sender.rs  sys.rs
src/output/: mod.rs
src/recording/: mod.rs
src/render/: gpu_text.rs  mod.rs
src/services/: mod.rs  playlist.rs  presentation.rs
src/slides/: mod.rs  props.rs
src/triggers/: automation.rs  http.rs  mod.rs  osc.rs
src/ui/: dialogs.rs  main_window.rs  messages.rs  mod.rs  navbar.rs  output_window.rs  sidebar.rs  state.rs  theme.rs
src/ui/audio/: mod.rs
src/ui/bible/: mod.rs
src/ui/components/: add_button.rs  color_slider.rs  dialog.rs  divider.rs  empty_state.rs  error_toast.rs  group_color.rs  labeled_field.rs  list_item.rs  live_badge.rs  mod.rs  preview_text.rs  reorder_toolbar.rs  search_input.rs  section_header.rs  tab_button.rs  toggle_button.rs
src/ui/editor/: canvas.rs  delete_confirm.rs  inspector.rs  mod.rs  object_helpers.rs  slide_list.rs
src/ui/handlers/: audio.rs  bible.rs  import_export.rs  layers.rs  media.rs  mod.rs  navigation.rs  outputs.rs  planning.rs  polish.rs  presentations.rs  presenter.rs  props.rs  recording.rs  slides.rs  songs.rs  themes.rs  triggers.rs  typography.rs  video.rs
src/ui/import_export/: mod.rs
src/ui/layers/: mod.rs
src/ui/navigation/: mod.rs
src/ui/ndi/: mod.rs
src/ui/output/: mod.rs
src/ui/planning/: mod.rs
src/ui/playlist/: mod.rs
src/ui/polish/: mod.rs
src/ui/presentations/: mod.rs
src/ui/presenter/: canvas.rs  mod.rs
src/ui/props/: mod.rs
src/ui/recording/: mod.rs
src/ui/settings/: mod.rs  outputs.rs  triggers.rs
src/ui/shell/: center.rs  edit.rs  left_rail.rs  media_bin.rs  mod.rs  right_dock.rs  show.rs  unified.rs
src/ui/slides/: mod.rs
src/ui/songs/: mod.rs
tests/: db_integration.rs  import_export.rs
(+5 files in other folders)
