[package]
name = "openpresenter"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
authors = ["Vincent <vincentzhangz@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/vincentzhangz/openpresenter"
homepage = "https://github.com/vincentzhangz/openpresenter"
description = "Modern open-source live presentation software built in Rust"

[features]
default = ["ndi-sdk"]
ndi-sdk = []

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
env_logger = "0.11"
ffmpeg-next = "8"
futures = "0.3"
glyphon = "0.12"
iced = { version = "0.14", features = [
    "tokio",
    "wgpu",
    "canvas",
    "image",
    "svg",
    "advanced",
] }
iced_font_awesome = "0.4"
image = "0.25"
log = "0.4"
lru = "0.18"
pollster = "1.0"
rfd = "0.17"
rodio = { version = "0.22", default-features = false, features = [
    "playback",
    "mp3",
    "wav",
    "flac",
    "vorbis",
] }
rosc = "0.11"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "1"
tower = "0.5"
uuid = { version = "1.24", features = ["v4", "serde"] }
wgpu = "30"
zip = { version = "8", features = ["deflate"] }

[build-dependencies]
bindgen = "0.72.1"

[dev-dependencies]
tempfile = "3"
